added code refactoring

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 <div id = "NoteList" >
 <INPUT type = "button" id="AddButton" VALUE="добавить заметку">
+    <div id="Idonotknow0" class="fuckYouBitch">
+        <h1 >Untitled </h1>
+        <h2 > </h2>
+    </div>
 </div>
 <div id = "Note">
     <h6 id = "date"></h6>
