added deleting. Some problems with delete functionality

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
 <div id = "NoteList" >
+
 <INPUT type = "button" id="AddButton" VALUE="добавить заметку">
+
     <div id="Idonotknow0" class="fuckYouBitch">
+
+        <INPUT type = "button" class="deleteButton" VALUE="X">
         <h1 >Untitled </h1>
         <h2 > </h2>
+        <h3> </h3>
+
     </div>
+
 </div>
 <div id = "Note">
-    <h6 id = "date"></h6>
+    <h6 id = "date"> </h6>
 
     <INPUT type = "text" id = "HeadLine" VALUE="Щелкни здесь!">
     <textarea id = "NoteBody" placeholder="note"> </textarea>
