added design of notes. Almost final version

--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
 <div id = "NoteList" >
 
-<INPUT type = "button" id="AddButton" VALUE="добавить заметку">
+<INPUT type = "button" id="AddButton" VALUE="Add note">
 
     <div id="Idonotknow0" class="fuckYouBitch">
 
-        <INPUT type = "button" class="deleteButton" VALUE="X">
+        <INPUT type = "button" class="deleteButton" VALUE="">
+
         <h1 >Untitled </h1>
         <h2 > </h2>
         <h3> </h3>
 
-    </div>
 
+
+</div>
 </div>
 <div id = "Note">
     <h6 id = "date"> </h6>
 
     <INPUT type = "text" id = "HeadLine" VALUE="Щелкни здесь!">
-    <textarea id = "NoteBody" placeholder="note"> </textarea>
+    <textarea id = "NoteBody" placeholder="Type here"> </textarea>
 
 </div>
 <script src = "script.js"></script>
