added some functionality. Final version

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id = "Note">
     <h6 id = "date"> </h6>
 
-    <INPUT type = "text" id = "HeadLine" VALUE="Щелкни здесь!">
+    <INPUT type = "text" id = "HeadLine" VALUE="">
     <textarea id = "NoteBody" placeholder="Type here"> </textarea>
 
 </div>
