fixed class of note shortcut

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <INPUT type = "button" id="AddButton" VALUE="Add note">
 
-    <div id="Idonotknow0" class="fuckYouBitch">
+    <div id="Idonotknow0" class="ShortcutNote">
 
         <INPUT type = "button" class="deleteButton" VALUE="">
 
